# local dev install command: 
#
#     $ pip install -e ".[dev]"

[metadata]
name = julienne
version = attr: julienne.__version__
author = Christopher Trudeau
url = https://github.com/cltrudeau/julienne
description = Splits code into copies based on version numbers in comments
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
license_files = LICENSE
classifiers = 
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Education
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Code Generators
    Topic :: Software Development :: Libraries :: Python Modules

[options]
install_requires =
    black==23.1.0
    tomli==2.0.1

[options.extras_require]
dev = 
    build==0.8.0
    coverage==6.5.0
    pudb==2022.1.2
    pyflakes==2.5.0
    tox==3.26.0
    twine==4.0.1
    waelstow==0.11.0

[options.entry_points]
console_scripts =
    juli = julienne.cmd:main

[tox:tox]
isolated_build = True
envlist = py{37,38,39,310,311}

[testenv]
commands = python -m unittest
deps = .[dev]
